[RomanToInteger] Adding #13 solution
v1 of #13. Also, more refactoring of old problems to reduce code and simplify files.

--- a/Obsidian/9. ☑️ Palindrome Number.md
+++ b/Obsidian/9. ☑️ Palindrome Number.md
@@ -31,21 +31,40 @@ Given an integer `x`, return `true` _if_ `x` _is a_ _**palindrome**__, and
 
 My Final Solution :
 ```cpp
-bool PalindromeNumber_v1(int x)
+bool PalindromeNumber_v2(int x)
 {
-	const std::string xStr = std::to_string(x);
+	// DIFF: No string
 
-	const char* left = &xStr[0];
-	const char* right = &xStr[xStr.size() - 1];
-
-	for (size_t i = 0; i < xStr.size() / 2; i++)
+	if (x < 0) // #NOTE Could also add (|| x != 0 && x % 10 == 0)
 	{
-		if (*left != *right)
+		return false;
+	}
+
+	int numDigits = 0;
+	int xCopy = x;
+
+	while (xCopy)
+	{
+		++numDigits;
+		xCopy /= 10;
+	}
+
+	int left = pow(10, numDigits - 1);
+
+	for (size_t i = 0; i < numDigits / 2; i++)
+	{
+		int l = x / left;
+		int r = x % 10;
+
+		if (l != r)
 		{
 			return false;
 		}
-		++left;
-		--right;
+
+		x = x % left;
+		x = x / 10;
+
+		left /= 100;
 	}
 
 	return true;
