[FizzBuzz] Classic fizz buzz solution
Really leaning into new test framework using Testing.h and templating more in Helpers.h

--- a/Obsidian/12. ☑️ Integer To Roman.md
+++ b/Obsidian/12. ☑️ Integer To Roman.md
@@ -128,4 +128,4 @@ I iterated again on NeetCode's solution, trying to strip out any class usage to 
 
 My final solution will be NeetCode's, but refactored to take better advantage of C++ practices to improve performance.
 
-One thing that NetCode's solutions shows is that setting up your data in interesting ways lets you iterate over it nicer but also solve the problem more efficiently or "elegantly", some might say.
+One thing that NetCode's solutions shows is that setting up your data in interesting ways lets you iterate over it nicer but also solve the problem more efficiently or "elegantly", some might say. An even more dramatic example would be the [Math-II](https://neetcode.io/solutions/integer-to-roman) solution where the logic is inlined to return the answer in on long addition sum statement chain.
