[StringToInt-atoi] Solution for #8 atoi
Also adding 3 more easy problems to tackle later, to have easy options for when I am less motivated to grind.

--- a/Obsidian/1. ☑️Two Sum.md
+++ b/Obsidian/1. ☑️Two Sum.md
@@ -90,4 +90,4 @@ It's interesting to look at the memory complexity as the number of indices copie
 ## Conclusion
 It seems other users found more efficient solutions so it would be nice to see how they achieved the 90%+ speed rating, but I am not willing to pay for LeetCode at this time so after finding 2 other solutions online I think I am satisfied with my current solutions at this time.
 
-#TODO Try another solution, swapping out the map for a vector/array an compare performance. The idea came from [Why You Should AVOID Linked Lists](https://youtu.be/cvZArAipOjo?t=516) where it was suggested that vector "lookups" could compare to and even outperform map operations in some cases.
+#TODO Try another solution, swapping out the map for a vector/array and compare performance. The idea came from [Why You Should AVOID Linked Lists](https://youtu.be/cvZArAipOjo?t=516) where it was suggested that vector "lookups" could compare to and even outperform map operations in some cases.
