--- a/Obsidian/8. ☑️ String to Integer (atoi).md
+++ b/Obsidian/8. ☑️ String to Integer (atoi).md
@@ -91,7 +91,62 @@ Reading stops at the first non-digit character 'w'.
 ---
 
 My Final Solution :
-```cpp
-// Pending...
+```cpp live:true sym:"StringToInteger_v3" file:"8.StringToInteger.cpp"
+int StringToInteger_v3(std::string s)
+{
+	int signMultiplier = 1;
+	int currentIndex = 0;
+
+	while (currentIndex < s.size() && s[currentIndex] == ' ')
+	{
+		++currentIndex;
+	}
+
+	if (s[currentIndex] == '-')
+	{
+		signMultiplier = -1;
+		++currentIndex;
+	}
+	else if (s[currentIndex] == '+')
+	{
+		++currentIndex;
+	}
+
+	int returnValue = 0;
+	while (currentIndex < s.size() &&
+		s[currentIndex] >= '0' && s[currentIndex] <= '9')
+	{
+		const int digit = s[currentIndex] - '0';
+
+		if (returnValue > (INT_MAX - digit) / 10)
+		{
+			if (signMultiplier == 1)
+			{
+				return INT32_MAX;
+			}
+			else
+			{
+				return INT32_MIN;
+			}
+		}
+		returnValue = returnValue * 10 + digit;
+
+		++currentIndex;
+	}
+
+	return returnValue * signMultiplier;
+}
 ```
 #### Notes :
+
+Going to need 32 bit int range checks to know if a value goes outside the top or bottom bounds. Consider handling signed an unsigned values.
+
+May need to trim, or otherwise sanitize and validate string contents before evaluating.
+
+The out of bound checks get me, especially since they are handled slightly differently for positive and negative numbers (> becomes <, and negative range is 1 larger).
+
+So in the end, trimming or modifying the original string s wasn't necessary, and would have been less efficient. I'd imagine that is always the case, but maybe a different data structure, in a different context could be an exception to the rule.
+
+Once I figured out the input sanitizing, things got much simpler. Instead of handling cases like multiple whitespace arrays, non-numeric characters, multiple arithmetic signs, just simplify and find the first valid character and then look until we run out of numbers or characters in the string. Much simpler.
+
+The [example solution](https://leetcode.com/problems/string-to-integer-atoi/solutions/6000040/1-ms-runtime-beats-100-user-step-by-steps-solution-easy-to-understand/) I saw and copied from laid things out so nicely. We can simply shift an index value past all whitespace, then check for a math sign, then loop over numbers and do a value check in the positive range that doesn't require negative number handling, but still supports the valid negative range. Then multiply the result by the sign to support negative return values. Pretty straight forward and a whole lot less code than my 2 solutions.
