[ContainerWithMostWater] Solution for #11

--- a/Obsidian/12. ☑️ Integer To Roman.md
+++ b/Obsidian/12. ☑️ Integer To Roman.md
@@ -66,7 +66,7 @@ Note: 49 is not 1 (I) less of 50 (L) because the conversion is based on decimal 
 ---
 
 My Final Solution :
-```cpp live:true sym:IntegerToRoman_v5 file:"12.IntegerToRoman.cpp"
+```cpp
 std::string IntegerToRoman_v5(int num)
 {
 	// DIFF 2nd iteration from NeetCode example, using a barebones char[] and pointer manipulation
