[3Sum] Attempted to solve #15 without using sorting
Tried brute forcing naive solution but would need to get pretty messy with edge cases. I started watching a solution video and they used sorting so I will check out other solutions at a later point

--- a/Obsidian/15. 🟨 3Sum.md
+++ b/Obsidian/15. 🟨 3Sum.md
@@ -37,5 +37,42 @@ Notice that the order of the output and the order of the triplets does not matte
 
 My Final Solution :
 ```cpp live:true sym:"3Sum_v?" file:"15.3Sum.cpp"
+
+#include <assert.h>
+#include <vector>
+
+// Link to leetcode problem https://leetcode.com/problemset/
+
+std::vector<std::vector<int>> threeSum_v1(const std::vector<int>& nums)
+{
+	return { };
+}
+
+#include "Testing.h"
+typedef std::vector<std::vector<int>>(*SolutionFuncPtr)(const std::vector<int>&);
+
+void main_3Sum()
+{
+	SolutionFuncPtr solutionFunc = threeSum_v1;
+
+	// LeetCode cases
+	std::vector<int> input = { };
+	std::vector<int> output = { };
+	assert(solutionFunc(input)[0] == output);
+
+	// My cases
+	// assert(solutionFunc() == true);
+
+	// Test solution performance
+	std::vector<SolutionFuncPtr> funcs = {
+		threeSum_v1,
+	};
+
+	RunSolutions(funcs, "", input);
+
+	int bp = 0;
+}
+
+// int main() { main_3Sum(); }
 ```
 #### Notes :
