--- a/Obsidian/25. 🟥 Reverse Nodes in k-Group.md
+++ b/Obsidian/25. 🟥 Reverse Nodes in k-Group.md
@@ -33,5 +33,95 @@ You may not alter the values in the list's nodes, only nodes themselves may be c
 
 My Final Solution :
 ```cpp live:true sym:"" file:"25.ReverseNodesInKGroup.cpp"
+
+#include <assert.h>
+#include <string>
+#include <vector>
+
+// https://leetcode.com/problems/merge-k-sorted-lists/
+
+struct ListNode {
+    int val;
+    ListNode *next;
+    ListNode() : val(0), next(nullptr) {}
+    ListNode(int x) : val(x), next(nullptr) {}
+    ListNode(int x, ListNode *next) : val(x), next(next) {}
+};
+
+ListNode* ReverseNodesInKGroup_v1(ListNode* lists, int k)
+{
+	return nullptr;
+}
+
+#include "Testing.h"
+typedef ListNode*(*SolutionFuncPtr)(ListNode*, int);
+
+void main_ReverseNodesInKGroup()
+{
+	SolutionFuncPtr solutionFunc = ReverseNodesInKGroup_v1;
+
+	// LeetCode cases
+	assert(solutionFunc(nullptr, 0) == nullptr);
+
+	// My cases
+	// assert(solutionFunc() == true);
+
+	// Test solution performance
+	std::vector<SolutionFuncPtr> funcs = {
+		ReverseNodesInKGroup_v1,
+	};
+
+	RunSolutions(funcs, nullptr, nullptr);
+
+	int bp = 0;
+}
+
+// int main() { main_ReverseNodesInKGroup(); }
+
+
+#include <assert.h>
+#include <string>
+#include <vector>
+
+// https://leetcode.com/problems/merge-k-sorted-lists/
+
+struct ListNode {
+    int val;
+    ListNode *next;
+    ListNode() : val(0), next(nullptr) {}
+    ListNode(int x) : val(x), next(nullptr) {}
+    ListNode(int x, ListNode *next) : val(x), next(next) {}
+};
+
+ListNode* ReverseNodesInKGroup_v1(ListNode* lists, int k)
+{
+	return nullptr;
+}
+
+#include "Testing.h"
+typedef ListNode*(*SolutionFuncPtr)(ListNode*, int);
+
+void main_ReverseNodesInKGroup()
+{
+	SolutionFuncPtr solutionFunc = ReverseNodesInKGroup_v1;
+
+	// LeetCode cases
+	assert(solutionFunc(nullptr, 0) == nullptr);
+
+	// My cases
+	// assert(solutionFunc() == true);
+
+	// Test solution performance
+	std::vector<SolutionFuncPtr> funcs = {
+		ReverseNodesInKGroup_v1,
+	};
+
+	RunSolutions(funcs, nullptr, nullptr);
+
+	int bp = 0;
+}
+
+// int main() { main_ReverseNodesInKGroup(); }
+
 ```
 #### Notes :
