[ProblemTemplates] Adding more problem template files
Worked on C++ quizzes today so not much to commit

--- a/Obsidian/15. 🟨 3Sum.md
+++ b/Obsidian/15. 🟨 3Sum.md
@@ -36,43 +36,41 @@ Notice that the order of the output and the order of the triplets does not matte
 ---
 
 My Final Solution :
-```cpp live:true sym:"3Sum_v?" file:"15.3Sum.cpp"
-
-#include <assert.h>
-#include <vector>
-
-// Link to leetcode problem https://leetcode.com/problemset/
-
-std::vector<std::vector<int>> threeSum_v1(const std::vector<int>& nums)
+```cpp live:true sym:"ThreeSum_v1" file:"15.3Sum.cpp"
+std::vector<std::vector<int>> ThreeSum_v1(const std::vector<int>& nums)
 {
-	return { };
+    // #NOTE Naive solution. No sorting
+
+    std::vector<std::vector<int>> triplets;
+
+    for (int i = 0; i < nums.size(); i++)
+    {
+        const int left = nums[i];
+
+        for (int j = i + 1; j < nums.size(); j++)
+        {
+            const int middle = nums[j];
+
+            for (int k = j + 1; k < nums.size(); k++)
+            {
+                const int right = nums[k];
+
+                if (left + middle + right  == 0)
+                {
+                    if (UniqueValues(triplets, left, middle, right))
+                    {
+                        triplets.push_back({ { left, middle, right } });
+                    }
+                }
+            }
+        }
+    }
+
+    return triplets;
 }
-
-#include "Testing.h"
-typedef std::vector<std::vector<int>>(*SolutionFuncPtr)(const std::vector<int>&);
-
-void main_3Sum()
-{
-	SolutionFuncPtr solutionFunc = threeSum_v1;
-
-	// LeetCode cases
-	std::vector<int> input = { };
-	std::vector<int> output = { };
-	assert(solutionFunc(input)[0] == output);
-
-	// My cases
-	// assert(solutionFunc() == true);
-
-	// Test solution performance
-	std::vector<SolutionFuncPtr> funcs = {
-		threeSum_v1,
-	};
-
-	RunSolutions(funcs, "", input);
-
-	int bp = 0;
-}
-
-// int main() { main_3Sum(); }
 ```
 #### Notes :
+
+It would be great if the description used more words, rather than math or code expression to describe the problem bounds, but still a skill issue.
+
+A tough one to brute force naively. Couldn't get it initially and had to jump to a solution video, but I gave it an honest effort.
